# ChangeLog for dev-libs/crypto++
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.17 2006/01/27 02:32:58 vanquirius Exp $

  27 Jan 2006; Marcelo Goes <vanquirius@gentoo.org>
  +files/crypto++-5.2.1-ubuntu-gcc4.patch, crypto++-5.2.1.ebuild:
  Add a ported version of Ubuntu's gcc4 patch for bug 117547.

  12 Nov 2005; Jason Wever <weeve@gentoo.org> crypto++-5.2.1.ebuild:
  Added ~sparc keyword wrt bug #112330.

  03 Sep 2005; Daniel Black <dragonheart@gentoo.org> crypto++-5.2.1.ebuild:
  dropped -mno-sse2 on ppc - bug #104596. Thanks to Daniel Grob

  17 Aug 2005; <rphillips@gentoo.org> crypto++-5.2.1.ebuild:
  Make sure line endings on test vectors are unix

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> crypto++-5.2.1.ebuild:
  stable on amd64

  17 Feb 2005; Robin H. Johnson <robbat2@gentoo.org> crypto++-5.2-r1.ebuild,
  crypto++-5.2.1.ebuild:
  Bug #69831: Ensure unzip is in DEPEND.

  07 Dec 2004; Daniel Black <dragonheart@gentoo.org> -crypto++-5.1-r1.ebuild,
  -crypto++-5.1.ebuild, crypto++-5.2-r1.ebuild, crypto++-5.2.1.ebuild,
  -crypto++-5.2.ebuild:
  Removed sse2 optimisations due to gcc problems. Bug #64646 and #63922 refer.
  Cleaned out old versions. Thanks to Krzysiek Pawlik
  <krzysiek.pawlik@people.pl> for the sse2 flag removal ebuild patch

  04 Nov 2004; Daniel Black <dragonheart@gentoo.org> crypto++-5.1-r1.ebuild,
  crypto++-5.1.ebuild, crypto++-5.2-r1.ebuild, crypto++-5.2.1.ebuild,
  crypto++-5.2.ebuild:
  added app-arch/zip dependancy as per bug #69831

*crypto++-5.2.1 (22 Sep 2004)

  22 Sep 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  +crypto++-5.2-r1.ebuild, +crypto++-5.2.1.ebuild:
  version bump. modified filter -fomit-frame-pointer. Reintroduced amd64 keyword
  as it has been fixed in 5.2+ according to their changelog. Changed maintaince
  to crypto herd. All thanks to hoffmajs@gmx.de and others in bug #62376.