@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/Attic/crypto++-5.2.1.ebuild,v 1.10 2006/01/27 02:32:58 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/Attic/crypto++-5.2.1.ebuild,v 1.11 2006/02/03 20:22:46 corsair Exp $
 
 inherit flag-o-matic eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/cryptopp/cryptopp${PV//.}.zip"
 
 LICENSE="cryptopp"
 SLOT="0"
-KEYWORDS="amd64 ~ppc ~sparc x86"
+KEYWORDS="amd64 ~ppc ~ppc64 ~sparc x86"
 DEPEND="app-arch/unzip"
 RDEPEND=""
 IUSE=""
