@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kvpnc/Attic/kvpnc-0.8.1.ebuild,v 1.2 2005/11/12 22:24:39 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kvpnc/Attic/kvpnc-0.8.1.ebuild,v 1.3 2006/02/03 20:25:58 corsair Exp $
 
 inherit kde
 
@@ -8,7 +8,7 @@ DESCRIPTION="kvpnc - a KDE-VPN connection utility."
 SRC_URI="http://download.gna.org/${PN}/${P}.tar.bz2"
 HOMEPAGE="http://home.gna.org/${PN}/"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 SLOT="0"
 
