@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/kvpnc
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/kvpnc/ChangeLog,v 1.15 2005/11/12 22:24:39 weeve Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/kvpnc/ChangeLog,v 1.16 2006/02/03 20:25:58 corsair Exp $
+
+  03 Feb 2006; Markus Rothe <corsair@gentoo.org> kvpnc-0.8.1.ebuild:
+  Added ~ppc64
 
   12 Nov 2005; Jason Wever <weeve@gentoo.org> kvpnc-0.8.1.ebuild:
   Added ~sparc keyword wrt bug #112330.
